# lead-scraper

./: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  requirements.txt
app/: config.py  main.py  schemas.py
app/bookers/: clubready.py  models.py  router.py  spark.py  wellnessliving.py
app/scrapers/: clubready.py  spark.py  wellnessliving.py
app/utils/: normalize.py
